--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,6 @@ ol li:nth-child(even){background: #dfdfdf;}
 
 .strike{text-decoration: line-through;}
 
-li:hover{
-  cursor: pointer;
- }
 .nav-item{
 	padding-left:1.5em;
 }
@@ -22,4 +19,22 @@ option[selected] {
     font-weight: bold;
     text-decoration: underline;
 	
+}
+
+span{
+	background-color: #e74c3c;
+	margin-right: 20px;
+	height: 40px;
+	text-align: center;
+	color: white;
+	width: 0px;
+	display:inline-block;
+	transition: 0.2s linear;
+	opacity: 0;
+}
+li:hover span {
+	width: 40px;
+	opacity: 1.0;
+	background-color: #4B0082;
+	cursor: pointer;
 }
